Crud de Usuários e documentação Swagger
